test/files/neg/exhausting.check
exhausting.scala:21: warning: match may not be exhaustive.
It would fail on the following inputs: List(_), List(_, _, _)
  def fail1[T](xs: List[T]) = xs match {
                              ^
exhausting.scala:27: warning: match may not be exhaustive.
It would fail on the following input: Nil
  def fail2[T](xs: List[T]) = xs match {
                              ^
exhausting.scala:32: warning: match may not be exhaustive.
It would fail on the following input: List((x: Int forSome x not in (1, 2)))
  def fail3a(xs: List[Int]) = xs match {
                              ^
exhausting.scala:39: warning: match may not be exhaustive.
It would fail on the following input: Bar3
  def fail3[T](x: Foo[T]) = x match {
                            ^
exhausting.scala:47: warning: match may not be exhaustive.
It would fail on the following inputs: (Bar1, Bar2), (Bar1, Bar3), (Bar2, Bar1), (Bar2, Bar2)
  def fail4[T <: AnyRef](xx: (Foo[T], Foo[T])) = xx match {
                                                 ^
exhausting.scala:56: warning: match may not be exhaustive.
It would fail on the following inputs: (Bar1, Bar2), (Bar1, Bar3), (Bar2, Bar1), (Bar2, Bar2)
  def fail5[T](xx: (Foo[T], Foo[T])) = xx match {
                                       ^
error: No warnings can be incurred under -Xfatal-warnings.
6 warnings found
one error found
